# shadowvoice

./: .gitignore  AGENTS.md  README.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  audio.py  main.py  scoring.py
backend/shadowvoice_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_scoring.py
docs/: pronunciation-spec.md
ios/: README.md
ios/ShadowVoiceClientCore/: Package.swift
ios/ShadowVoiceClientCore/Sources/ShadowVoiceClientCore/: AnalyzeModels.swift
ios/ShadowVoiceClientCore/Tests/ShadowVoiceClientCoreTests/: AnalyzeModelsTests.swift
ios/ShadowVoiceIOS/ShadowVoiceIOS/: AnalyzeViewModel.swift  AudioRecorderController.swift  ContentView.swift  Info.plist  ShadowVoiceAPIClient.swift  ShadowVoiceIOSApp.swift
ios/ShadowVoiceIOS/ShadowVoiceIOS.xcodeproj/: project.pbxproj
ios/ShadowVoiceIOS/ShadowVoiceIOS.xcodeproj/xcshareddata/xcschemes/: ShadowVoiceIOS.xcscheme
ios/ShadowVoiceIOS/ShadowVoiceIOS/Assets.xcassets/AccentColor.colorset/: Contents.json
shadowvoice-frontend/: index.html  package-lock.json  package.json
shadowvoice-frontend/src/: App.jsx
shadowvoice-frontend/src/components/: AudioStatusBar.jsx  RecorderButton.jsx  TranscriptPanel.jsx  WaveformDisplay.jsx
